--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "autoprefixer": "^9.8.6",
+    "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
     "gsap": "^3.6.0",
     "node-sass": "^4.14.1",
