--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
+    "uniqid": "^5.3.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
