--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^9.8.6",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
+    "firebase-admin": "^9.6.0",
     "gsap": "^3.6.0",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.35",
